--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "datauri": "^0.7.1",
-    "inline-css-url": "file:../inline-css-url",
-    "inline-less": "file:../inline-less",
     "is-local-path": "0.0.1",
+    "less": "^2.5.1",
+    "lodash": "^3.10.0",
     "mz": "^2.0.0",
+    "rework": "^1.0.1",
+    "rework-plugin-url": "^1.0.1",
     "string": "^3.3.0"
   }
 }
