--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "datauri": "^0.7.1",
-    "is-local-path": "0.0.1",
+    "is-local-path": "^0.1.0",
     "less": "^2.5.1",
     "lodash": "^3.10.0",
     "mz": "^2.0.0",
