--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "inline-html",
   "version": "0.1.4",
-  "description": "Embed local assets in an HTML document.",
+  "description": "Inline local assets referenced in an HTML document.",
   "repository": "panosoft/inline-html",
   "main": "lib/index.js",
   "scripts": {
