--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@panosoft/ramda-utils": "^0.1.12",
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "datauri": "^0.7.1",
     "is-local-path": "^0.1.0",
     "less": "^2.5.1",
-    "lodash": "^3.10.0",
     "mz": "^2.0.0",
     "postcss": "^5.0.0",
     "postcss-url": "^5.0.0",
+    "ramda": "^0.17.1",
     "string": "^3.3.0"
   },
   "devDependencies": {
