--- a/package.json
+++ b/package.json
@@ -5,21 +5,22 @@
   "repository": "panosoft/inline-html",
   "main": "lib/index.js",
   "scripts": {
-    "test": "mocha --harmony_arrow_functions"
+    "test": "mocha",
+    "test:debug": "mocha --debug-brk"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@panosoft/ramda-utils": "^0.1.12",
+    "@panosoft/ramda-utils": "^0.2.0",
     "cheerio": "^0.19.0",
     "co": "^4.6.0",
     "datauri": "^0.8.0",
     "is-local-path": "^0.1.0",
     "less": "^2.5.1",
     "mz": "^2.0.0",
-    "postcss": "^5.0.0",
+    "postcss": "^5.0.12",
     "postcss-url": "^5.0.0",
-    "ramda": "^0.17.1",
+    "ramda": "^0.18.0",
     "string": "^3.3.0"
   },
   "devDependencies": {
